styles/styles.css
* {
  margin: 0;
  padding: 0;
}

input:checked + label {
  text-decoration: line-through;
}

input {
  padding: 0.4rem;
}

body {
  background-color: #164e9b;
}

h1 {
  color: white;
  text-align: center;
  margin: 1rem;
}

.box {
  position: relative;
  display: flex;
  align-items: center;
  flex-direction: column;
  margin: 2rem;
}

.radio {
  color: white;
  margin: 0.4rem;
  text-decoration: none;
}

.errors {
  color: rgb(225, 169, 66);
  font-size: 1.5rem;
}

form {
  margin: 2rem;
}

.list {
  margin: 2rem;
  border: solid 2px white;
  width: 100%;
  max-width: 40rem;
  background-color: white;
  border: 1px solid black;
  color: black;
}

.list__box {
  padding: 0.6rem 0;
  background-color: rgb(212, 215, 227);
  border-bottom: solid 0.1rem;
}

.list__rendered {
  font-size: large;
}

.food-list {
  display: flex;
  justify-content: space-between;
  gap: 2rem;
  padding: 0.2rem;
  margin: 1rem 2rem;
}

.food-list__name {
  text-transform: uppercase;
  padding: 0 1rem;
  margin: auto;
}

.food-list__shop {
  color: #164e9b;
}

.button {
  background-color: #164e9b;
  color: white;
  border: white;
  padding: 0.4rem;
  border-radius: 2px;
  margin-left: 1rem;
}

.pointer {
  cursor: pointer;
}

.button__delete {
  background-color: red;
  color: white;
  border: solid white 1px;
  border-radius: 2px;
  padding: 0.4rem;
}

@media (min-width: 40rem) {
  .food-list {
    margin: 0.2 0.4rem;
  }
}

